Use the same Checker Framework configuration for all JDKs >= 9 (#73)
Co-authored-by: Werner Dietl <wdietl@gmail.com>